--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chat-elements": "^12.0.11",
     "react-custom-checkbox": "^3.1.5",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
